tegel/src/components/header/header-theme-vars.scss
:root,
.sdds-theme-light {
  --sdds-header-bg: var(--sdds-blue-800);
  --sdds-header-overlay: var(--sdds-black);
  --sdds-header-app-name-color: var(--sdds-white);
  --sdds-header-mob-menu-color: var(--sdds-white);
  --sdds-header-mob-menu-open-color: var(--sdds-grey-958);
  --sdds-header-mob-menu-open-bg: var(--sdds-white);
  --sdds-header-mob-menu-open-border: var(--sdds-grey-300);
  --sdds-nav-item-bg: var(--sdds-white);
  --sdds-nav-item-bg-hover: var(--sdds-grey-100);
  --sdds-nav-item-border-color: var(--sdds-blue-700);
  --sdds-nav-item-border-color-active: var(--sdds-blue-400);
  --sdds-nav-item-core-bg-hover: var(--sdds-grey-100);
  --sdds-nav-item-core-color-active: var(--sdds-grey-800);
  --sdds-nav-item-core-border-color: var(--sdds-blue-700);
  --sdds-nav-item-core-border-color-after: var(--sdds-blue-400);
  --sdds-header-nav-item-color: var(--sdds-white);
  --sdds-header-nav-item-bg-active: var(--sdds-blue-700);
  --sdds-nav-dropdown-item-bg: var(--sdds-white);
  --sdds-nav-dropdown-item-border-color: var(--sdds-grey-300);
  --sdds-header-nav-item-dropdown-opened-bg: var(--sdds-white);
  --sdds-header-nav-item-dropdown-opened-color: var(--sdds-grey-958);

  // sdds-nav__basic-element-style
  --sdds-header--basic-element-bg: var(--sdds-blue-800);
  --sdds-header--basic-element-bg-hover: var(--sdds-blue-700);

  /* Searchbar */
  --sdds-header-searchbar-input-bg: var(--sdds-white);
  --sdds-header-searchbar-input-color: var(--sdds-black);
  --sdds-header-searchbar-input-placeholder-color: var(--sdds-grey-958);
  --sdds-header-searchbar-input-expanded-after-border-bottom: var(--sdds-grey-300);
  --sdds-header-searchbar-border-color: var(--sdds-blue-700);
  --sdds-header-searchbar-btn-active: var(--sdds-white);
  --sdds-header-searchbar-x-btn-bg: var(--sdds-white);
  --sdds-header-searchbar-x-btn-bg-hover: var(--sdds-grey-100);
  --sdds-header-searchbar-btn-svg-fill: var(--sdds-grey-958);

  /* Searchbar Results */
  --sdds-header-searchbar-result-item-bg: var(--sdds-white);
  --sdds-header-searchbar-result-item-bg-hover: var(--sdds-grey-100);
  --sdds-header-searchbar-result-item-bg-active: var(--sdds-blue-400);
  --sdds-header-searchbar-result-item-bg-visited: var(--sdds-grey-400);
  --sdds-header-searchbar-result-item-anchor-bg-hover: var(--sdds-grey-100);
  --sdds-header-searchbar-result-item-top-border-color: var(--sdds-grey-300);
  --sdds-header-searchbar-result-item-top-bg: var(--sdds-white);
  --sdds-header-searchbar-result-item-category-title-bg: var(--sdds-white);
  --sdds-header-searchbar-result-x-btn: var(--sdds-white);
  --sdds-header-searchbar-result-item-core-color: var(--sdds-black);
  --sdds-header-searchbar-result-item-core-bg: var(--sdds-white);
  --sdds-header-searchbar-result-category-border-color: var(--sdds-grey-300);

  /* Searchbar Results All */
  --sdds-header-searchbar-all-result-item-bg-hover: var(--sdds-grey-100);
  --sdds-header-searchbar-all-result-item-bg-active: var(--sdds-blue-400);
  --sdds-header-searchbar-all-result-item-bg-visited: var(--sdds-grey-400);

  /* Avatar */
  --sdds-header-avatar-item-bg: var(--sdds-white);
  --sdds-header-avatar-item-border-color: var(--sdds-grey-300);
  --sdds-header-avatar-subtitle-color: var(--sdds-grey-500);
  --sdds-header-avatar-item-bg: var(--sdds-white);
  --sdds-header-avatar-item-bg-hover: var(--sdds-grey-100);
  --sdds-header-avatar-item-color: var(--sdds-grey-700);
  --sdds-header-avatar-item-btn-bg: var(--sdds-white);

  /* App Launcher */
  --sdds-header-app-launcher-menu-bg: var(--sdds-white);
  --sdds-header-app-launcher-btn-bg: var(--sdds-white);
  --sdds-header-app-launcher-btn-color: var(--sdds-white);
  --sdds-header-app-launcher-item-border-color: var(--sdds-grey-300);
  --sdds-header-app-launcher-category-title-bg: var(--sdds-white);
  --sdds-header-app-launcher-category-title-color: var(--sdds-grey-500);
  --sdds-header-app-launcher-item-bg: var(--sdds-white);
  --sdds-header-app-launcher-item-bg-hover: var(--sdds-grey-100);
  --sdds-header-app-launcher-item-color: var(--sdds-grey-700);

  /* MOBILE AND TABLET */
  --sdds-header-mobile-nav-center-bg: var(--sdds-white);
  --sdds-header-mobile-nav-center-item-border-color: var(--sdds-grey-300);
  --sdds-header-mobile-nav-center-item-border-color-active-after: var(--sdds-blue-400);
  --sdds-header-mobile-nav-center-dropdown-item--last-border-color: var(--sdds-grey-300);
  --sdds-header-mobile-nav-toolbar-border-color: var(--sdds-grey-300);

  // TODO - Can be removed?

  /*   --sdds-header-mobile-avatar-btn-bg: var(--sdds-grey-100);
  --sdds-header-mobile-avatar-btn-bg-hover: var(--sdds-white);
  --sdds-header-mobile-avatar-btn-color: var(--sdds-grey-958);
  --sdds-header-mobile-avatar-btn-border-color: var(--sdds-grey-300); */
  --sdds-header-mobile-searchbar-container-border-color: var(--sdds-grey-300);
  --sdds-header-mobile-searchbar-input-bg: var(--sdds-white);
  --sdds-header-mobile-searchbar-input-color: var(--sdds-black);
  --sdds-header-mobile-searchbar-input-placeholder-color: var(--sdds-grey-800);
  --sdds-header-mobile-searchbar-input-expanded-before-bg: var(--sdds-white);
  --sdds-header-mobile-searchbar-btn-bg-hover: var(--sdds-grey-100);
  --sdds-header-mobile-searchbar-open-btn-bg: var(--sdds-white);
  --sdds-header-mobile-searchbar-open-btn-bg-hover: var(--sdds-grey-100);
  --sdds-header-mobile-searchbar-btn-svg-fill: var(--sdds-grey-958);
  --sdds-header-mobile-avatar--item-btn-bg: var(--sdds-white);
  --sdds-header-mobile-avatar--item-btn-bg-hover: var(--sdds-grey-100);
  --sdds-header-mobile-avatar--item-btn-color: var(--sdds-grey-958);
}

:root,
.sdds-theme-dark {
}

